[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/Montserrat-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/Button.png" type="Texture" id=2]
[ext_resource path="res://Pause.gd" type="Script" id=3]
[ext_resource path="res://Sounds/a_button.wav" type="AudioStream" id=4]

[sub_resource type="Theme" id=3]

[sub_resource type="DynamicFont" id=2]
size = 48
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
resource_name = "continue_enter"
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/VBoxContainer/continue:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 1.05 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "continue_exited"
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/VBoxContainer/continue:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.05, 1.05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "exit_enter"
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/VBoxContainer/exit:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 1.05 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "exit_exited"
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/VBoxContainer/exit:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.05, 1.05 ), Vector2( 1, 1 ) ]
}

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 3 )

[node name="Overlay" type="PanelContainer" parent="."]
self_modulate = Color( 0, 0, 0, 0.266667 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 675.0
margin_top = 449.0
margin_right = 1245.0
margin_bottom = 631.0
custom_constants/separation = 20

[node name="continue" type="TextureButton" parent="CenterContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.619608 )
margin_right = 570.0
margin_bottom = 81.0
rect_min_size = Vector2( 570, 81 )
rect_pivot_offset = Vector2( 285, 40 )
size_flags_horizontal = 4
size_flags_vertical = 0
shortcut_in_tooltip = false
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/continue"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.5
margin_top = -33.0
margin_right = 140.5
margin_bottom = 61.5
size_flags_horizontal = 5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Продолжить

"
align = 1
valign = 1

[node name="exit" type="TextureButton" parent="CenterContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.619608 )
margin_top = 101.0
margin_right = 570.0
margin_bottom = 182.0
rect_min_size = Vector2( 570, 81 )
rect_pivot_offset = Vector2( 285, 40 )
size_flags_horizontal = 4
size_flags_vertical = 0
shortcut_in_tooltip = false
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/exit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.5
margin_top = -33.0
margin_right = 140.5
margin_bottom = 61.5
size_flags_horizontal = 4
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "В меню
"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -18.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/continue_enter = SubResource( 4 )
anims/continue_exited = SubResource( 5 )
anims/exit_enter = SubResource( 6 )
anims/exit_exited = SubResource( 7 )

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/continue" to="." method="_on_continue_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/continue" to="." method="_on_continue_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/exit" to="." method="_on_exit_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/exit" to="." method="_on_exit_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
